--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,18 @@
             <version>2.8.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.googlecode.lanterna</groupId>
+            <artifactId>lanterna</artifactId>
+            <version>LATEST</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.4</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
